assets/css/app.css
/* ... */
div.declare-yaku button.declare-yaku-button:active {
  filter: drop-shadow(0 calc(var(--tile-size) / 8) 0 var(--tile-front-side));
  transform: translateY(calc(var(--tile-size) / 8));
}

/* rules */
div.rules-wrapper {
  z-index: 10000;
  width: 100%;
  height: 100%;
  user-select: none;
  pointer-events: none;
  position: absolute;
  left: calc(-1.25 * var(--tile-size));
  top: calc(-0.5 * var(--tile-size));
  display: flex;
  flex-flow: column nowrap;
  row-gap: calc(0.25 * var(--tile-size));
}
div.rules-wrapper > label {
  padding: calc(0.125 * var(--tile-size));
  border-radius: calc(0.125 * var(--tile-size));
  font-size: calc(0.5 * var(--tile-size));
  bottom: calc(-1.5 * var(--tile-size));
  width: calc(0.5 * var(--tile-size));
  pointer-events: initial;
  writing-mode: tb;
  display: flex;
  justify-content: center;
  align-items: center;
}
div.rules-wrapper > label.lang-en {
  transform: rotate(180deg); /* make text face right */
}

/*
  hack; add invisible "unselect" radio option to allow unselecting
  this appears above the selected label, but below unselected labels
*/
input.rules-popover-unselect + label {
  background: transparent;
  width: calc(0.5 * var(--tile-size));
  height: calc(100% + 1 * var(--tile-size));
  top: 0;
  position: absolute;
  z-index: -2;
}
input.rules-popover-radio:checked ~ input.rules-popover-unselect + label {
  z-index: 0;
}
input.rules-popover-radio:checked + label {
  z-index: -1;
}
input.rules-popover-radio:not(:checked) + label {
  z-index: 1;
}
div.rules-popover-container {
  z-index: 10000;
  position: absolute;
  left: calc(1.25 * var(--tile-size));
  top: calc(0.5 * var(--tile-size));
  width: 0;
  transition: width 0.1s ease;
  height: 100%;
  user-select: none;
}
div.rules-popover-container::before {
  content: "";
  background: #3f3f3f;
  border: 0 solid var(--tile-front);
  border-radius: calc(0.25 * var(--tile-size));
  position: absolute;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  z-index: -1;
  transition: border-width 0.1s cubic-bezier(0, 1, 0, 1);
}
input.rules-popover-radio:checked + label + div.rules-popover-container {
  width: 100%;
  pointer-events: initial;
  user-select: text;
}
input.rules-popover-radio:checked + label + div.rules-popover-container::before {
  border-width: calc(0.125 * var(--tile-size));
}
div.rules-popover {
  width: 100%;
  height: calc(100% - calc(0.25 * var(--tile-size)));
  margin: calc(0.125 * var(--tile-size)) 0;
  position: relative;
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  color: white;
  overflow-y: scroll;
  scrollbar-width: none; /* Firefox */
}
div.rules-popover::-webkit-scrollbar { 
  display: none; /* Safari/Chrome */
}
div.rules-popover-rule {
  flex-basis: 50%;
}
div.rules-popover-rule.full-width {
  flex-basis: 100%;
}
div.rules-popover-title {
  white-space: pre-wrap;
  font-size: calc(0.75 * var(--tile-size));
  font-weight: 600;
  border-bottom: calc(0.0625 * var(--tile-size)) solid var(--tile-front);
  margin: calc(0.25 * var(--tile-size));
}
div.rules-popover-text {
  white-space: pre-wrap;
  font-size: calc(0.5 * var(--tile-size));
  margin: calc(0.25 * var(--tile-size));
}
div.rules-popover-text > div.tile {
  display: inline-block;
  --tile-scale-factor: 0.65; /* enough for 14 tiles to be in a row */
  margin-top: calc(0.25 * var(--tile-scale-factor) * var(--tile-size));
}
div.rules-popover-text > div.tile:hover {
  transform: translateY(-100%) scale(3);
  z-index: 10;
}

/* tile numbers */
input.tile-numbers-checkbox + label {
  position: absolute;
  padding: 0 calc(0.125 * var(--tile-size));
  border-radius: calc(0.125 * var(--tile-size));
  font-size: calc(0.5 * var(--tile-size));
  bottom: calc(-1.5 * var(--tile-size));
  width: calc(0.75 * var(--tile-size));
  height: calc(1 * var(--tile-size));
  right: calc(-0.5 * var(--tile-size));
  display: flex;
  justify-content: center;
  align-items: center;
}

/* display wall */
div.display-wall-hover {
  background: gray;
  position: absolute;
  padding: 0 calc(0.125 * var(--tile-size));
  border-radius: calc(0.125 * var(--tile-size));
  font-size: calc(0.75 * var(--tile-size));
  bottom: calc(-1.5 * var(--tile-size));
  right: calc(0.75 * var(--tile-size));
}
div.display-wall-container {
  position: absolute;
  width: 100%;
  height: 100%;
  display: none;
  z-index: -100;
}
div.display-wall-hover:hover + div.display-wall-container {
  display: block;
  z-index: 100;
}
div.display-wall {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
div.display-wall::before {
  position: absolute;
  content: "";
  top: 0;
  left: 0;
  background: #0000007F;
  border-radius: calc(0.25 * var(--tile-size));
  width: 100%;
  height: 100%;
}
div.display-wall.minimized {
  display: none;
}
div.display-wall > div.wall {
  display: flex;
  flex-flow: row-reverse;
  transform-style: preserve-3d;
  transform-origin: 50% 50%;
  width: calc(18 * 0.75 * var(--tile-size));
  height: var(--tile-size);
  position: absolute;
}
/* debug */
/*
div.display-wall-container { display: block; z-index: 100; }
div.display-wall > div.wall { background: red; }
div.display-wall > div.wall * { visibility: hidden; }
*/
div.display-wall > div.wall.toimen {
  justify-items: flex-end;
  top: calc(0.25 * var(--tile-size));
  left: calc(0.5 * var(--tile-size));
  transform: rotate(180deg);
}
div.display-wall > div.wall.shimocha {
  right: calc(1.5 * var(--tile-size));
  top: calc(0.75 * var(--tile-size));
  transform: rotate(270deg);
  transform-origin: top right;
}
div.display-wall > div.wall.self {
  flex-direction: row;
  bottom: calc(0.5 * var(--tile-size));
  left: calc(1.75 * var(--tile-size));
  transform: rotate(180deg);
}
div.display-wall > div.wall.kamicha {
  left: calc(1.5 * var(--tile-size));
  top: calc(1.5 * var(--tile-size));
  transform: rotate(90deg);
  transform-origin: top left;
}
div.display-wall > div.wall > div.tile-stack {
  display: flex;
  flex-direction: column-reverse;
}
/* ... */

